// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector DetailsPage Page Test Initial snapshot should match render 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container large header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall"
      >
        <div
          class="breadcrumbs"
        >
          <div>
            <a
              class="breadcrumb"
              href="/account/dummy/settings/resources/connectors"
            >
              resources
            </a>
            <span
              class="bp3-icon StyledProps--main separator"
              data-icon="main-chevron-right"
            >
              <svg
                height="11"
                viewBox="0 0 8 14"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div>
            <span
              class="lastBreadcrumb"
            >
              connectorsLabel
            </span>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--margin-left-xsmall StyledProps--margin-right-xsmall"
            data-icon="service-dockerhub"
          >
            <svg
              height="35"
              viewBox="0 0 14 10"
              width="35"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
              />
              <path
                d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
              />
              <path
                d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
              />
            </svg>
          </span>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-size-medium StyledProps--font-weight-bold"
            >
              Sample
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
              >
                Sample
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <span
          class="bp3-tag tags small active"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            overview
          </span>
        </span>
        <span
          class="bp3-tag tags small"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            refrencedBy
          </span>
        </span>
        <span
          class="bp3-tag tags small"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            activityHistoryLabel
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-large"
      style="height: inherit;"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-small"
        style="width: 67%;"
      >
        <div
          class="StyledProps--font StyledProps--main buttonContainer"
        >
          <div
            class="optionBtns"
          >
            <div
              class="item selected"
              data-name="visual-btn"
              role="button"
              tabindex="0"
            >
              visual
            </div>
            <div
              class="item"
              data-name="yaml-btn"
              role="button"
              tabindex="0"
            >
              yaml
            </div>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
            id="editDetailsBtn"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
              icon="edit"
            >
              <svg
                data-icon="edit"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              editDetails
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
          style="height: 100%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            style="width: 100%; height: 100%;"
          >
            <div
              class="Layout--horizontal StyledProps--main detailsSectionContainer"
            >
              <div
                class="StyledProps--font StyledProps--main detailsSection"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
                >
                  overview
                </p>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    connectors.name_labels.Docker
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    identifier
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    tagsLabel
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          connector:dx
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main detailsSection"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
                >
                  credentials
                </p>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    connectors.docker.dockerProvideType
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      DockerHub
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    connectors.docker.dockerRegistryURL
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    credType
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Username and Password
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    username
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    password
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      account.Sample
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main activityContainer"
      >
        <div
          class="StyledProps--font StyledProps--main activitySummary"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
            >
              connectivityStatus
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
            >
              na
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
          >
            lastStatusCheckAt
             
            na
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
          >
            lastSuccessfulStatusCheckAt
             
            na
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              connectors.stepThreeName
            </span>
          </button>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
          >
            changeHistory
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
          >
            lastUpdated
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
          >
            12/23/2020 09:10 am
             
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
          >
            connectorCreated
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
          >
            12/23/2020 09:10 am
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector DetailsPage Page Test Initial snapshot should match render at org level 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container large header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall"
      >
        <div
          class="breadcrumbs"
        >
          <div>
            <a
              class="breadcrumb"
              href="/account/dummy/settings/organizations/dummyOrg/details"
            />
            <span
              class="bp3-icon StyledProps--main separator"
              data-icon="main-chevron-right"
            >
              <svg
                height="11"
                viewBox="0 0 8 14"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div>
            <a
              class="breadcrumb"
              href="/account/dummy/settings/organizations/dummyOrg/setup/resources/connectors"
            >
              resources
            </a>
            <span
              class="bp3-icon StyledProps--main separator"
              data-icon="main-chevron-right"
            >
              <svg
                height="11"
                viewBox="0 0 8 14"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div>
            <span
              class="lastBreadcrumb"
            >
              connectorsLabel
            </span>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--margin-left-xsmall StyledProps--margin-right-xsmall"
            data-icon="service-dockerhub"
          >
            <svg
              height="35"
              viewBox="0 0 14 10"
              width="35"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
              />
              <path
                d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
              />
              <path
                d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
              />
            </svg>
          </span>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-size-medium StyledProps--font-weight-bold"
            >
              Sample
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
              >
                Sample
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <span
          class="bp3-tag tags small active"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            overview
          </span>
        </span>
        <span
          class="bp3-tag tags small"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            refrencedBy
          </span>
        </span>
        <span
          class="bp3-tag tags small"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            activityHistoryLabel
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--padding-large"
      style="height: inherit;"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-small"
        style="width: 67%;"
      >
        <div
          class="StyledProps--font StyledProps--main buttonContainer"
        >
          <div
            class="optionBtns"
          >
            <div
              class="item selected"
              data-name="visual-btn"
              role="button"
              tabindex="0"
            >
              visual
            </div>
            <div
              class="item"
              data-name="yaml-btn"
              role="button"
              tabindex="0"
            >
              yaml
            </div>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
            id="editDetailsBtn"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
              icon="edit"
            >
              <svg
                data-icon="edit"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              editDetails
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
          style="height: 100%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            style="width: 100%; height: 100%;"
          >
            <div
              class="Layout--horizontal StyledProps--main detailsSectionContainer"
            >
              <div
                class="StyledProps--font StyledProps--main detailsSection"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
                >
                  overview
                </p>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    connectors.name_labels.Docker
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    identifier
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    tagsLabel
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          connector:dx
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main detailsSection"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
                >
                  credentials
                </p>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    connectors.docker.dockerProvideType
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      DockerHub
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    connectors.docker.dockerRegistryURL
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    credType
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Username and Password
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    username
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      Sample
                    </span>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  >
                    password
                  </p>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
                    >
                      account.Sample
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main activityContainer"
      >
        <div
          class="StyledProps--font StyledProps--main activitySummary"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
            >
              connectivityStatus
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
            >
              na
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
          >
            lastStatusCheckAt
             
            na
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
          >
            lastSuccessfulStatusCheckAt
             
            na
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              connectors.stepThreeName
            </span>
          </button>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
          >
            changeHistory
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
          >
            lastUpdated
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
          >
            12/23/2020 09:10 am
             
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
          >
            connectorCreated
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
          >
            12/23/2020 09:10 am
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
